@@ -1,3 +1,9 @@
+17 March 2016: Wouter
+	- Fix #746: Fix unbound sets CD bit on all forwards.
+	  If no trust anchors, it'll not set CD bit when forwarding to another
+	  server.  If a trust anchor, no CD bit on the first attempt to a
+	  forwarder, but CD bit thereafter on repeated attempts to get DNSSEC.
+
 16 March 2016: Wouter
 	- Fix ip-transparent for ipv6 on FreeBSD, thanks to Nick Hibma.
 	- Fix ip-transparent for tcp on freebsd.
